# enosi

./: .clangd  .envrc  .gitignore  .gitmodules  .luarc.json  .p4config  def.lua  driver.lua  enosi.lua  flags.lua  flake.nix  impure-clang.nix  init.lua  init.ps1  init.sh  lakefile  lakefile.lua  lpp-gdb.py  lsp.lua  makefile  nelua.nix  project.lua  recipes.lua  remakelake.sh  user.lua  user_default.lua  workspace.lua
ecs/: .gitignore  main.cpp  project.lua
elua/: project.lua  project.old.lua
hash/: Hash.cpp  Hash.h
hreload/: .gitignore  a.out  compile_commands.json  main.cpp  project.lua
iro/: .gitignore  lakemodule  lakemodule.lua  makefile  project.lua  project.old.lua
lake/: .gitignore  Makefile  flake.nix  lakefile  lakemodule  lakemodule.lua  project.lua
lamu/: ast.lua  errhandler.lua  lamu.lua  main.cpp  parser.lua  test.lamu  token.lua
llvm/: build.sh  build_reldbg.sh  (+3 more)
tree-sitter-lpp/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.lpp  tree-sitter.json
tree-sitter-lpp/bindings/c/: tree-sitter-lpp.h  tree-sitter-lpp.pc.in
tree-sitter-lpp/bindings/go/: binding.go  binding_test.go
tree-sitter-lpp/bindings/node/: binding.cc  index.js
tree-sitter-lpp/bindings/python/tests/: test_binding.py
tree-sitter-lpp/bindings/python/tree_sitter_lpp/: __init__.py  binding.c
tree-sitter-lpp/bindings/rust/: build.rs  lib.rs
tree-sitter-lpp/bindings/swift/TreeSitterLppTests/: TreeSitterLppTests.swift
tree-sitter-lpp/src/: grammar.json  node-types.json  parser.c
(+1349 files in other folders)
